# 3-package-sea_otter

./: Pipfile  README.md  example.py  pyproject.toml  wkndPlanner.py
.github/workflows/: Pipfile  build.yml  event-logger.yml
pynyc/: __init__.py  __main__.py  main.py  pynyc.py
pynyc/data/: michelin_nyc.json  restaurant_list.json
scripts/: scrape_michelin.py
tests/: test_activity.py  test_cafe.py  test_excursion.py  test_find_restaurant.py  test_nightlife.py
